playbooks/yaml/argocd-apps/plex/deployment.yaml
# playbooks/yaml/argocd-apps/plex/deployment.yaml
# Minimal Plex deployment using linuxserver/plex:1.41.3
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
        component: main
    spec:
      containers:
        - name: plex
          image: linuxserver/plex:1.41.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 32400
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
        - name: media
          persistentVolumeClaim:
            claimName: plex-media
        - name: initial-config
          configMap:
            name: plex-initial-config
